--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <style></style>
   </head>
   <body>
+    <main>
     <div class="cardContainer">
       <div class="qrCodeContainer">
         <img
@@ -26,13 +27,14 @@
         />
       </div>
       <section class="textContainer">
-        <h2>Improve your front-end skills by building projects</h2>
+        <h1>Improve your front-end skills by building projects</h1>
         <p>
           Scan the QR code to visit Frontend Mentor and take your coding skills
           to the next level
         </p>
       </section>
     </div>
+  </main>
     <footer>
       <div class="attribution">
         Challenge by
