--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <link rel="stylesheet" href="cssReset.css">
     <link rel="stylesheet" href="index.css" />
     <title>Frontend Mentor | QR code component</title>
 
